@@ -1,4 +1,4 @@
-package com.ysgpjt.seokvey.survey.service;
+package com.ysgpjt.seokvey.survey.service.unit;
 
 import com.ysgpjt.seokvey.common.exception.SeokveyException;
 import com.ysgpjt.seokvey.support.TestBuilders;
@@ -7,15 +7,14 @@ import com.ysgpjt.seokvey.survey.entity.Question;
 import com.ysgpjt.seokvey.survey.entity.QuestionOption;
 import com.ysgpjt.seokvey.survey.entity.Survey;
 import com.ysgpjt.seokvey.survey.entity.SurveyParticipation;
-import com.ysgpjt.seokvey.survey.repository.QuestionOptionRepository;
-import com.ysgpjt.seokvey.survey.repository.QuestionRepository;
-import com.ysgpjt.seokvey.survey.repository.SurveyParticipationRepository;
-import com.ysgpjt.seokvey.survey.repository.SurveyRepository;
+import com.ysgpjt.seokvey.survey.repository.*;
+import com.ysgpjt.seokvey.survey.service.SurveyService;
 import com.ysgpjt.seokvey.type.ErrorType;
 import com.ysgpjt.seokvey.type.SeletionType;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -25,9 +24,12 @@ import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 @ActiveProfiles("local")
 @ExtendWith(MockitoExtension.class)
@@ -44,6 +46,9 @@ class SurveyServiceTest {
 
     @Mock
     private SurveyParticipationRepository surveyParticipationRepository;
+
+    @Mock
+    private SurveyAnswerRepository surveyAnswerRepository;
 
     @InjectMocks
     private SurveyService surveyService;
@@ -81,7 +86,10 @@ class SurveyServiceTest {
     @DisplayName("문항이 없는 설문 생성 불가")
     void createSurveyNoQuestion() {
         // given
-        SurveyCreateRequest surveyCreateRequest = createSurvey("문항이 없는 설문", "설명", null);
+        // 설문 테스트 데이터
+        // 문항 옵션이 없는 경우
+        SurveyCreateRequest surveyCreateRequest = TestBuilders.SurveyCreateRequestGraphBuilder.create()
+                .build();
 
         // when
         SeokveyException seokveyException = assertThrows(SeokveyException.class, () -> surveyService.createSurvey(surveyCreateRequest));
@@ -94,8 +102,12 @@ class SurveyServiceTest {
     @Test
     void createSurveyNoQuestionOption() {
         // given
-        QuestionCreateRequest question = createQuestion("문항 내용",SeletionType.SINGLE,1,null);
-        SurveyCreateRequest surveyCreateRequest = createSurvey("문항 옵션이 없는 설문", "설명", Collections.singletonList(question));
+        // 설문 테스트 데이터
+        // 문항 옵션이 없는 경우
+        SurveyCreateRequest surveyCreateRequest = TestBuilders.SurveyCreateRequestGraphBuilder.create()
+                .addQuestion("첫번째 문항", SeletionType.SINGLE, 1, List.of("옵션 1","옵션 2"))
+                .addQuestion("두번째 문항", SeletionType.SINGLE, 2, new ArrayList<>())
+                .build();
 
         // when
         SeokveyException seokveyException = assertThrows(SeokveyException.class, () -> surveyService.createSurvey(surveyCreateRequest));
@@ -109,9 +121,12 @@ class SurveyServiceTest {
     @DisplayName("문항 옵션이 1개인 설문 생성 불가")
     void createSurveyOneQuestionOption() {
         // given
-        QuestionOptionCreateRequest questionOptionCreateRequest = createOption("문항 옵션 내용", 1);
-        QuestionCreateRequest question = createQuestion("문항 내용",SeletionType.SINGLE,1, Collections.singletonList(questionOptionCreateRequest));
-        SurveyCreateRequest surveyCreateRequest = createSurvey("문항 옵션이 1개인 설문", "설명", Collections.singletonList(question));
+        // 설문 테스트 데이터
+        // 문항 옵션 1개인 문항
+        SurveyCreateRequest surveyCreateRequest = TestBuilders.SurveyCreateRequestGraphBuilder.create()
+                .addQuestion("첫번째 문항", SeletionType.SINGLE, 1, List.of("옵션 1","옵션 2"))
+                .addQuestion("두번째 문항", SeletionType.SINGLE, 2, List.of("옵션 1"))
+                .build();
 
         // when
         SeokveyException seokveyException = assertThrows(SeokveyException.class, () -> surveyService.createSurvey(surveyCreateRequest));
@@ -125,19 +140,20 @@ class SurveyServiceTest {
     @DisplayName("정상 설문 생성")
     void createSurvey() {
         // given
-        List<QuestionOptionCreateRequest> questionOptionCreateRequestList = List.of(
-                createOption("문항 옵션 내용", 1),
-                createOption("문항 옵션 내용2", 2)
-        );
-        QuestionCreateRequest questionCreateRequest = createQuestion("문항 내용",SeletionType.SINGLE,1,questionOptionCreateRequestList);
-        SurveyCreateRequest surveyCreateRequest = createSurvey("정상 설문", "설명", Collections.singletonList(questionCreateRequest));
+        SurveyCreateRequest surveyCreateRequest = TestBuilders.SurveyCreateRequestGraphBuilder.create()
+                .addQuestion("첫번째 문항", SeletionType.SINGLE, 1, List.of("옵션 1","옵션 2"))
+                .addQuestion("두번째 문항", SeletionType.SINGLE, 2, List.of("옵션 1","옵션 2"))
+                .build();
 
         // when
-        SurveyResponse savedSurvey = surveyService.createSurvey(surveyCreateRequest);
+        SurveyResponse surveyResponse = assertDoesNotThrow(() -> surveyService.createSurvey(surveyCreateRequest));
 
         // then
-        Survey survey = surveyRepository.findById(savedSurvey.getSurveyId()).get();
-        assertEquals(survey.getId(), savedSurvey.getSurveyId());
+        // save에 전달된 값 검증
+        ArgumentCaptor<Survey> captor = ArgumentCaptor.forClass(Survey.class);
+        verify(surveyRepository, times(1)).save(captor.capture());
+        Survey saved = captor.getValue();
+        assertThat(saved.getId()).isEqualTo(surveyResponse.getSurveyId());
 
     }
 
@@ -149,75 +165,38 @@ class SurveyServiceTest {
         // 정상 설문
         // 첫번째 문항 : 옵션 1, 옵션 2
         // 두번쨰 문항 : 옵션 A, 옵션 B, 옵션 C
+        TestBuilders.SurveyBundle surveyBundle = TestBuilders.SurveyBuilder.create()
+                .surveyId(1L)
+                .surveyTitle("정상 설문")
+                .surveyDescription("설명")
+                .addQuestion("첫번째 문항", SeletionType.SINGLE, 1, List.of("옵션 1", "옵션 2"))
+                .addQuestion("두번째 문항", SeletionType.MULTIPLE, 2, List.of("옵션 A", "옵션 B", "옵션 C"))
+                .build();
 
-        // 옵션 생성
-        List<QuestionOptionCreateRequest> questionOptionCreateRequestList1 = List.of(
-                createOption("옵션 1", 1),
-                createOption("옵션 2", 2)
-        );
-
-        List<QuestionOptionCreateRequest> questionOptionCreateRequestList2 = List.of(
-                createOption("옵션 A", 1),
-                createOption("옵션 B", 2),
-                createOption("옵션 C", 3)
-        );
-        
-        // 문항 생성
-        QuestionCreateRequest questionCreateRequest1 = createQuestion("첫번째 문항",SeletionType.SINGLE,1,questionOptionCreateRequestList1);
-        QuestionCreateRequest questionCreateRequest2 = createQuestion("두번째 문항",SeletionType.MULTIPLE,1,questionOptionCreateRequestList2);
-        
-        // 설문 생성
-        List<QuestionCreateRequest> questionCreateRequestList = List.of(questionCreateRequest1,questionCreateRequest2);
-        SurveyCreateRequest surveyCreateRequest = createSurvey("정상 설문", "설명", questionCreateRequestList);
-        SurveyResponse savedSurvey = surveyService.createSurvey(surveyCreateRequest);
-
-        // 설문 참여 내용 생성
-        // 생성한 설문 조회
-        Survey survey = surveyRepository.findById(savedSurvey.getSurveyId()).get();
-        List<Question> questionList = questionRepository.findBySurvey(survey);
-        List<SurveyAnswerRequest> surveyAnswerRequestList = new ArrayList<>();
-
-        for (Question question : questionList) {
-            // 생성한 설문의 문항 옵션 아이디 조회
-            List<Long> questionOptionList = questionOptionRepository.findByQuestion(question).stream()
-                    .map(QuestionOption::getId).collect(Collectors.toList());
-
-            // 문항이 다중선택인 경우 1개이상 랜덤 선택
-            if (question.getSelectionType().equals(SeletionType.MULTIPLE)) {
-                Collections.shuffle(questionOptionList);
-                int selectedOptionCount = 1 + new Random().nextInt(questionOptionList.size());
-                SurveyAnswerRequest surveyAnswer = SurveyAnswerRequest.builder()
-                        .questionId(question.getId())
-                        .questionOptionIds(questionOptionList.subList(0, selectedOptionCount))
-                        .build();
-                surveyAnswerRequestList.add(surveyAnswer);
-
-            } else {
-                SurveyAnswerRequest surveyAnswer = SurveyAnswerRequest.builder()
-                        .questionId(question.getId())
-                        .questionOptionIds(Collections.singletonList(questionOptionList.get(new Random().nextInt(questionOptionList.size()))))
-                        .build();
-                surveyAnswerRequestList.add(surveyAnswer);
-            }
-        }
-
-        SurveyParticipationRequest request = SurveyParticipationRequest.builder()
-                .surveyId(survey.getId())
-                .surveyDt(LocalDateTime.now())
-                .answers(surveyAnswerRequestList)
+        // 설문 참여 데이터
+        SurveyParticipationRequest request = TestBuilders.SurveyParticipationBuilder.create()
+                .surveyId(surveyBundle.survey().getId())
+                .addAnswers(surveyBundle.questions().get(0).getId(), Collections.singletonList(surveyBundle.options().get(0).getId()))
+                .addAnswers(surveyBundle.questions().get(1).getId(), List.of(surveyBundle.options().get(2).getId(), surveyBundle.options().get(3).getId()))
                 .build();
 
         String anonToken = UUID.randomUUID().toString();
         String ipAddress = "127.0.0.1";
 
+        // db 조회 모킹
+        given(surveyRepository.findById(any())).willReturn(Optional.of(surveyBundle.survey()));
+        given(questionRepository.findBySurvey(any())).willReturn(surveyBundle.questions());
+        given(questionOptionRepository.findAllById(any())).willReturn(surveyBundle.options());
+
         // when
-        SurveyResponse participation =
-                surveyService.participateSurvey(request,anonToken,ipAddress);
+        SurveyResponse surveyResponse = assertDoesNotThrow(() -> surveyService.participateSurvey(request, anonToken, ipAddress));
 
         // then
-        SurveyParticipation surveyParticipation = surveyParticipationRepository.findBySurvey(survey).get();
-        assertNotNull(participation.getSurveyId());
-        assertEquals(participation.getSurveyId(),surveyParticipation.getSurvey().getId());
+        // save에 전달된 값 검증
+        ArgumentCaptor<SurveyParticipation> captor = ArgumentCaptor.forClass(SurveyParticipation.class);
+        verify(surveyParticipationRepository, times(1)).save(captor.capture());
+        SurveyParticipation saved = captor.getValue();
+        assertThat(saved.getSurvey().getId()).isEqualTo(surveyResponse.getSurveyId());
 
     }
 
